<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Shop</string>
    <string name="screen_shop_title">Shop</string>
    <string name="shop_category_hint">Clothing</string>
    <string name="screen_payment_title">Payment</string>
    <string name="contact_phone">+91987654321</string>
    <string name="contact_email">gmail@example.com</string>
    <string name="label_item">Item</string>
    <string name="item_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="badge_discount">5% Discount</string>
    <string name="label_shipping_options">Shipping Options</string>
    <string name="shipping_standard_row">Standard � FREE</string>
    <string name="shipping_express_row">Express � $1,700</string>
    <string name="delivery_eta">Delivered on or before Thursday, 23 April 2026</string>
    <string name="label_total_prefix">Total</string>
    <string name="btn_pay">Pay</string>
    <string name="success_title">Done!</string>
    <string name="success_subtitle">You card has been successfully charged</string>
    <string name="btn_go_first">Go To First Page</string>
</resources>
